--- a/src/Navbar/navbar.css
+++ b/src/Navbar/navbar.css
@@ -1,8 +1,19 @@
+.navcontainer {
+    width: 101%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
 .logo {
     width: 154px;
     height: 181px;
     margin-top: 25px;
     margin: 40px;
+    display: flex;
+    justify-content: center;    
+    align-items: center;
   }
   
   .nav {
@@ -23,4 +34,11 @@
     transition: transform 0.2s ease-in-out;
     cursor: default;
     text-decoration: none;
+  }
+
+  @media only screen and (max-width: 1024px) {
+    .navcontainer {
+      display: flex;
+      flex-direction: row;
+    }
   }
