--- a/src/Referenser/referenser.css
+++ b/src/Referenser/referenser.css
@@ -1,104 +1,173 @@
 .bodyRef {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: column;
-  }
-  
-  .titleRef {
-    font-weight: bold;
-    font-family: dosis, sans-serif;
-    color: #002554;
-    font-size: 57px;
-    font-weight: 500;
-    margin-top: 40px;
-    margin-bottom: 20px;
-  }
-  
-  .subtitleRef {
-    font-size: 20px;
-    cursor: pointer;
-    font-family: merriweather, sans-serif;
-    color: #999a9a;
-    max-width: 600px;
-    letter-spacing: 1px;
-    line-height: 1.5;
-  }
-  
-  .spanContainerRef {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    padding: 20px;
-    width: 75%;
-    margin-bottom: 50px;
-  }
-  
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+}
+
+.titleRef {
+  font-weight: bold;
+  font-family: dosis, sans-serif;
+  color: #002554;
+  font-size: 57px;
+  font-weight: 500;
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
+
+.subtitleRef {
+  font-size: 20px;
+  cursor: pointer;
+  font-family: merriweather, sans-serif;
+  color: #999a9a;
+  max-width: 600px;
+  letter-spacing: 1px;
+  line-height: 1.5;
+}
+
+.spanContainerRef {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 20px;
+  width: 75%;
+  margin-bottom: 50px;
+}
+
+.cardContainerRef {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  width: 75%;
+  gap: 20px;
+}
+
+.cardRef {
+  display: flex;
+  flex-direction: column;
+  width: 100%; /* Adjusted width for responsiveness */
+  margin-bottom: 20px; /* Add margin between cards */
+  height: auto; /* Ensure height adjusts dynamically */
+  padding: 20px; /* Added padding for spacing */
+}
+
+.cardTitleRef {
+  font-size: 25px;
+  font-family: dosis, sans-serif;
+  color: #002554;
+  margin-bottom: 10px; /* Adjusted margin-bottom */
+}
+
+.cardSubtitleRef {
+  font-size: 15px;
+  font-family: merriweather, sans-serif;
+  color: #999a9a;
+  letter-spacing: 2px;
+}
+
+.buttonRef {
+  background-color: #002554;
+  color: white;
+  width: 200px;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+  font-family: dosis, sans-serif;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  transition: transform 0.2s ease-in-out;
+}
+
+.iconContainerRef {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 75%;
+  margin-bottom: 50px;
+  margin-top: 50px;
+}
+
+.iconsRef {
+  width: 190px;
+  height: 120px;
+  margin: 10px;
+}
+
+.linkStyleRef {
+  text-decoration: none;
+  color: #002554;
+  font-size: 20px;
+  font-weight: 500;
+  font-family: dosis, sans-serif;
+}
+
+@media only screen and (max-width: 820px) {
   .cardContainerRef {
-    display: flex;
+    width: 85%;
     align-items: center;
-    flex-direction: row;
-    width: 75%;
-    gap: 20px;
-  }
-  
-  .cardRef {
     display: flex;
-    flex-direction: row;
-    width: 50%;
-    margin-bottom: 10px;
-    height: 150px;
+    flex-direction: column;
+    justify-content: center;
   }
-  
-  .cardTitleRef {
-    font-size: 25px;
-    font-family: dosis, sans-serif;
-    color: #002554;
+  .cardRef {
+    width: 100%;
+    margin-bottom: 20px;
+    max-height: none;
+    overflow-y: visible;
+  }
+  .titleRef {
+    font-size: 40px;
+    margin-top: 20px;
     margin-bottom: 20px;
   }
-  
+}
+
+@media only screen and (max-width: 1024px) {
+  .bodyRef {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .titleRef{
+    font-size: 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  .cardContainerRef {
+    width: 85%;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .cardRef {
+    width: 85%;
+    margin-bottom: 20px;
+    max-height: none;
+    overflow-y: visible;
+    padding: 0px
+  }
+  .cardTitleRef {
+    font-size: 20px;
+    margin-bottom: 20px;
+    align-items: center;
+    justify-content: center;
+    padding-top: 20px;
+  }
   .cardSubtitleRef {
     font-size: 15px;
-    font-family: merriweather, sans-serif;
-    color: #999a9a;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
   }
-  
-  .buttonRef {
-    background-color: #002554;
-    color: white;
-    width: 200px;
-    padding: 10px;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-    font-size: 20px;
-    font-family: dosis, sans-serif;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    transition: transform 0.2s ease-in-out;
-  }
-  
-  .iconContainerRef {
+  .iconContainerRef{
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 75%;
-    margin-bottom: 50px;
-    margin-top: 50px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 0px;
   }
-  
-  .iconsRef {
-    width: 190px;
-    height: 120px;
-    margin: 10px;
-  }
-  
-  .linkStyleRef {
-    text-decoration: none;
-    color: #002554;
-    font-size: 20px;
-    font-weight: 500;
-    font-family: dosis, sans-serif;
-  }
-  
+}
