--- a/src/Footer/footer.css
+++ b/src/Footer/footer.css
@@ -12,6 +12,10 @@
   .span {
     color: #999a9a;
   }
+
+  .span1 {
+    color: #999a9a;
+  }
   
   .hzLine {
     width: 200px;
@@ -27,19 +31,33 @@
     }
     .style {
       margin-top: 0;
+      flex-wrap: wrap;
       display: flex;
       align-items: center;
+      justify-content: space-around;
+      width: 80%;
+      gap: 5px;
+    }
+    .span1 {
+      display: none;
     }
 }
 
 @media only screen and (max-width: 1024px) {
     .style {
       margin-top: 0;
+      flex-wrap: wrap;
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: space-around;
+      width: 80%;
+      gap: 5px;
+
     }
     .hzLine {
+      display: none;
+    }
+    .span1 {
       display: none;
     }
 }
