--- a/src/Tjanster/tjanster.css
+++ b/src/Tjanster/tjanster.css
@@ -12,7 +12,7 @@
 
 .businessImgTjanster {
   width: 75vw;
-  margin-bottom: 20px; /* Fixed missing unit */
+  margin-bottom: 20px;
 }
 
 .overLayFTjanster {
