--- a/src/Footer/footer.css
+++ b/src/Footer/footer.css
@@ -1,12 +1,13 @@
 .style {
     bottom: 0;
     left: 0;
-    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-around;
     height: 50px;
     margin-top: 60px;
+    position : relative;
+
   }
   
   .span {
@@ -25,37 +26,17 @@
     padding: 0;
   }
 
-  @media only screen and (max-width: 768px) {
+  @media screen and (max-width: 1400px) {
     .hzLine {
       display: none;
     }
     .style {
-      margin-top: 0;
+      margin-top: 20px;
       flex-wrap: wrap;
       display: flex;
       align-items: center;
       justify-content: space-around;
-      width: 80%;
       gap: 5px;
-    }
-    .span1 {
-      display: none;
-    }
-}
-
-@media only screen and (max-width: 1024px) {
-    .style {
-      margin-top: 0;
-      flex-wrap: wrap;
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-      width: 80%;
-      gap: 5px;
-
-    }
-    .hzLine {
-      display: none;
     }
     .span1 {
       display: none;
