--- a/src/Kvalitet&Miljö/kvalitetMiljo.css
+++ b/src/Kvalitet&Miljö/kvalitetMiljo.css
@@ -128,7 +128,7 @@
   font-family: dosis, sans-serif;
 }
 
-@media only screen and (max-width: 1024px) {
+@media screen and (max-width: 1400px) {
   .bodyKM {
     display: flex;
     justify-content: center;
@@ -155,14 +155,14 @@
     flex-direction: column;
     justify-content: center;
     width: 85%;
-    gap: 20px;
-    margin-bottom: 20px;
+    margin: 0;
   }
   .cardKM {
     display: flex;
     flex-direction: column;
     width: 85%;
     margin-bottom: 50px;
+    height: fit-content;
   }
   .cardKM1 {
     display: none;
@@ -180,13 +180,18 @@
     color: #999a9a;
     letter-spacing: 2px;
     line-height: 1.5;
-    width: 95%; /* Adjusted width for responsiveness */
+    width: 95%;
+    height: fit-content;
   }
   .cardTitleKM {
     font-size: 25px;
     font-family: dosis, sans-serif;
     color: #002554;
+    text-align: center;
+  }
+  .titleKM {
+    font-size: 30px;
+    margin-top: 20px;
     margin-bottom: 20px;
-    text-align: center; /* Aligning text in the middle */
   }
 }
