--- a/src/Markservice/markservice.css
+++ b/src/Markservice/markservice.css
@@ -1,147 +1,129 @@
 .bodyMark {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-  }
-  
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
+
 .markImage {
-    width: 75%;
+  width: 75%;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+}
+
+.titleMark {
+  font-weight: bold;
+  font-family: dosis, sans-serif;
+  color: #002554;
+  font-size: 57px;
+  font-weight: 500;
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
+
+.subtitleMark {
+  font-size: 20px;
+  cursor: pointer;
+  font-family: merriweather, sans-serif;
+  color: #999a9a;
+  max-width: 600px;
+  letter-spacing: 1px;
+  line-height: 1.5;
+}
+
+.spanContainerMark {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 20px;
+  width: 75%;
+  margin-bottom: 50px;
+}
+
+.cardContainerMark {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  width: 75%;
+  gap: 20px;
+}
+
+.cardMark {
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+  margin-bottom: 50px;
+  height: 150px;
+}
+
+.cardTitleMark {
+  font-size: 25px;
+  font-family: dosis, sans-serif;
+  color: #002554;
+  margin-bottom: 20px;
+}
+
+.cardSubtitleMark {
+  font-size: 15px;
+  font-family: Merriweather, sans-serif;
+  color: #999a9a;
+  letter-spacing: 2px;
+}
+
+.buttonMark {
+  background-color: #002554;
+  color: white;
+  width: 200px;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+  font-family: dosis, sans-serif;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  transition: transform 0.2s ease-in-out;
+}
+
+.linkStyleMark {
+  text-decoration: none;
+  color: #002554;
+  font-size: 20px;
+  font-weight: 500;
+  font-family: dosis, sans-serif;
+}
+
+@media screen and (max-width: 1400px) {
+  .bodyMark {
     display: flex;
-    justify-content: space-around;
-    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
-  
-  .titleMark {
-    font-weight: bold;
-    font-family: dosis, sans-serif;
-    color: #002554;
-    font-size: 57px;
-    font-weight: 500;
-    margin-top: 40px;
-    margin-bottom: 20px;
-  }
-  
-  .subtitleMark {
-    font-size: 20px;
-    cursor: pointer;
-    font-family: merriweather, sans-serif;
-    color: #999a9a;
-    max-width: 600px;
-    letter-spacing: 1px;
-    line-height: 1.5;
-  }
-  
-  .spanContainerMark {
+  .cardContainerMark {
+    width: 85%;
+    align-items: center;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    padding: 20px;
-    width: 75%;
-    margin-bottom: 50px;
+    justify-content: center;
+    height: fit-content;
   }
-  
-  .cardContainerMark {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    width: 75%;
-    gap: 20px;
-  }
-  
   .cardMark {
-    display: flex;
-    flex-direction: row;
-    width: 50%;
-    margin-bottom: 50px;
-    height: 150px;
-  }
-  
-  .cardTitleMark {
-    font-size: 25px;
-    font-family: dosis, sans-serif;
-    color: #002554;
+    width: 85%;
     margin-bottom: 20px;
+    max-height: none;
+    height: fit-content;
   }
-  
+  .titleMark {
+    font-size: 40px;
+  }
+  .cardTitleMark {
+    width: 90%;
+
+  }
   .cardSubtitleMark {
-    font-size: 15px;
-    font-family: Merriweather, sans-serif;
-    color: #999a9a;
-    letter-spacing: 2px;
+    width: 90%;
   }
-  
-  .buttonMark {
-    background-color: #002554;
-    color: white;
-    width: 200px;
-    padding: 10px;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-    font-size: 20px;
-    font-family: dosis, sans-serif;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    transition: transform 0.2s ease-in-out;
-  }
-  
-  .linkStyleMark {
-    text-decoration: none;
-    color: #002554;
-    font-size: 20px;
-    font-weight: 500;
-    font-family: dosis, sans-serif;
-  }
-  
-  @media only screen and (max-width: 820px) {
-    .cardContainerMark {
-      width: 85%;
-      align-items: center;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
-    .cardMark {
-      width: 100%;
-      margin-bottom: 20px;
-      max-height: none;
-      overflow-y: visible;
-    }
-    .markImage {
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-    }
-    .titleMark {
-      font-size: 40px;
-      margin-top: 20px;
-      margin-bottom: 20px;
-    }
-  }
-  
-  @media only screen and (max-width: 1024px) {
-    .bodyMark {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-    }
-    .cardContainerMark {
-      width: 85%;
-      align-items: center;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
-    .cardMark {
-      width: 85%;
-      margin-bottom: 20px;
-      max-height: none;
-      overflow-y: visible;
-    }
-  }
-  
+}
