--- a/src/Offert/offert.css
+++ b/src/Offert/offert.css
@@ -48,6 +48,7 @@
   width: 400px;
   margin-bottom: 10px;
   height: 40px;
+  font-size: 18px;
 }
 
 .cardCommentOffert {
@@ -56,6 +57,7 @@
   width: 400px;
   margin-bottom: 10px;
   height: 150px;
+  font-size: 18px;
 }
 
 .cardSubtitleOffert {
@@ -94,27 +96,9 @@
   width: 45%;
 }
 
-@media only screen and (max-width: 820px) {
-  .bodyOffert {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-  .cardContainerOffert {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .titleOffert {
-    font-size: 40px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-}
 
-@media only screen and (max-width: 1024px) {
+
+@media screen and (max-width: 1400px) {
   .bodyOffert {
     display: flex;
     justify-content: center;
@@ -143,13 +127,9 @@
     width: 260px;
     margin-bottom: 20px;
   }
-}
-
-@media only screen and (max-width: 768px) {
   .titleOffert {
     font-size: 30px;
     margin-top: 20px;
-    margin-bottom: 20px;
   }
   .form {
     width: 90%;
@@ -161,5 +141,10 @@
   }
     .form label {
     margin-bottom: 10px;
+  }
+  .spanContainerOffert {
+    font-size: 40px;
+    padding: 0px;
+    margin-bottom: 0px;
   }
 }
