--- a/src/Referenser/referenser.css
+++ b/src/Referenser/referenser.css
@@ -29,9 +29,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding: 20px;
   width: 75%;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 .cardContainerRef {
@@ -103,28 +102,8 @@
   font-family: dosis, sans-serif;
 }
 
-@media only screen and (max-width: 820px) {
-  .cardContainerRef {
-    width: 85%;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  .cardRef {
-    width: 100%;
-    margin-bottom: 20px;
-    max-height: none;
-    overflow-y: visible;
-  }
-  .titleRef {
-    font-size: 40px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-}
+@media screen and (max-width: 1400px) {
 
-@media only screen and (max-width: 1024px) {
   .bodyRef {
     display: flex;
     justify-content: center;
@@ -137,8 +116,8 @@
     margin-bottom: 20px;
   }
   .cardContainerRef {
-    width: 85%;
-    align-items: center;
+    width: 75%;
+    align-items: baseline;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -153,7 +132,7 @@
   .cardTitleRef {
     font-size: 20px;
     margin-bottom: 20px;
-    align-items: center;
+    align-items: baseline;
     justify-content: center;
     padding-top: 20px;
   }
@@ -163,11 +142,19 @@
     padding-bottom: 20px;
     margin-bottom: 20px;
   }
+  .spanContainerRef {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 75%;
+    margin-bottom: 20px;
+  }
   .iconContainerRef{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding-bottom: 0px;
+    margin-bottom: 0px;
   }
 }
