--- a/src/Business/business.css
+++ b/src/Business/business.css
@@ -17,7 +17,7 @@
 .textTitle {
   font-size: 45px;
   font-family: dosis, sans-serif;
-  color: #999a9a;
+  color: #002554;
   margin: 15px;
   letter-spacing: 1.5px;
 }
@@ -25,7 +25,7 @@
 .textSubtitle {
   font-size: 45px;
   font-family: dosis, sans-serif;
-  color: #999a9a;
+  color: #002554;
   margin: 15px;
   letter-spacing: 1.5px;
   margin-bottom: 50px;
@@ -119,71 +119,46 @@
   font-family: dosis, sans-serif;
 }
 
-@media only screen and (max-width: 820px) {
-  .cardContainer {
-    width: 85%;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  .text {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-  }
-  .textTitle {
-    display: none;
-  }
-  .textSubtitle {
-    display: none;
-  }
-  .card {
-    width: 500px;
-  }
-  .businessImg {
-    width: 95%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .overLayF {
-    width: 100%;
-  }
-}
-@media only screen and (max-width: 1024px) {
+@media screen and (max-width: 1400px) {
   .body {
     display: flex;
     justify-content: center;
     align-items: center;
   }
-    .cardContainer {
+  .cardContainer {
     width: 85%;
     align-items: center;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
   }
   .text {
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
     justify-content: center;
-
+    width: 85%;
   }
   .textTitle {
     align-items: center;
     justify-content: center;
+    font-size: 40px;
   }
   .textSubtitle {
-    align-items: center;
-    justify-content: center;
+    display: none;
   }
   .card {
     width: 300px;
     align-items: center;
     justify-content: center;
+  }
+  .businessImgContainer {
+    width: 85%;
+    align-items: center;
+    justify-content: center;
+  }
+  .cardImage {
+    width: 300px;
+    height: 250px;
   }
 }
