--- a/src/Navbar/navbar.css
+++ b/src/Navbar/navbar.css
@@ -1,123 +1,126 @@
 /* navbar.css */
 
 .logo {
-    width: 120px;
-    margin-bottom: 25px;
-  }
-  
-  .logoContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-right: 10px; /* Add margin to create space between logo and burger menu */
-  }
-  
-  .navBody {
-    display: flex;
-    flex-direction: column;
-    width: 85%;
-    align-items: center;
-  }
-  
-  /* .navLinkContainer {
+  width: 120px;
+  margin-bottom: 25px;
+}
+
+.logoContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px; /* Add margin to create space between logo and burger menu */
+}
+
+.navBody {
+  display: flex;
+  flex-direction: column;
+  width: 85%;
+  align-items: center;
+}
+
+/* .navLinkContainer {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     width: 100%;
   } */
-  
-  .navcontainer {
-    display: flex;
-    flex-direction: column; /* Stack logo and navigation elements vertically */
-    justify-content: center; /* Center content vertically */
-    align-items: center; /* Center content horizontally */
-    margin: auto; /* Center the navcontainer horizontally */
-  }
-  
-  .navbarElements {
-    display: flex;
-    align-items: center;
-    width: 100%; /* Make burger menu and logo occupy full width */
-  }
-  
-  .nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 89%;
-  }
-  
-  .linkStyle {
-    margin-bottom: 20px;
-  }
-  
+
+.navcontainer {
+  display: flex;
+  flex-direction: column; /* Stack logo and navigation elements vertically */
+  justify-content: center; /* Center content vertically */
+  align-items: center; /* Center content horizontally */
+  margin: auto; /* Center the navcontainer horizontally */
+}
+
+.navbarElements {
+  display: flex;
+  align-items: center;
+  width: 100%; /* Make burger menu and logo occupy full width */
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 89%;
+}
+
+.linkStyle {
+  margin-bottom: 20px;
+}
+
+.burgerMenu {
+  display: none; /* Hide burger menu icon by default */
+}
+.nav.open {
+  background-color: white; /* Change the background color */
+}
+
+@media screen and (max-width: 1400px) {
   .burgerMenu {
-    display: none; /* Hide burger menu icon by default */
+    display: block;
   }
-  
-  @media screen and (max-width: 1400px) {
-    .burgerMenu {
-      display: block;
-    }
-  
-    .navBody {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-      width: 75%;
-    }
-  
-    .navcontainer {
-      flex-direction: row;
-      justify-content: space-between;
-      width: 100%;
-      align-items: center;
-    }
-  
-    .nav {
-      display: none;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      background-color: white;
-      position: absolute;
-      width: 200px;
-      height: 20vh;
-      padding: 20px;
-    }
-  
-    /* .navLinkContainer {
+
+  .navBody {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 75%;
+  }
+
+  .navcontainer {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+  }
+
+  .nav {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    background: white;
+    width: 200px;
+    height: 20vh;
+    padding: 20px;
+  }
+
+  /* .navLinkContainer {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
       width: 0;
     } */
-  
-    .nav.open {
-      display: flex;
-      align-items: center;
-      justify-content: flex-end;
-      position: absolute;
-      left: 75%; 
-      top: 25%;
-      transform: translateX(-50%);
-      z-index: 1000;
-    }
-  
-    .burgerMenu {
-      width: 50%; /* Adjust width as needed */
-      text-align: center; /* Center the burger menu icon */
-    }
-    .navbarElements {
-      display: block;
-      align-items: center;
-      justify-content: space-between;
-      width: 40px;
-    }
-    .burgerMenu.hidden {
-      display: none;
-    }
+
+  .nav.open {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    position: absolute;
+    transform: translateX(-50%);
+    background-color: white;
+    z-index: 1000;
+    height: fit-content;
   }
+
+  .burgerMenu {
+    width: 50%; /* Adjust width as needed */
+    text-align: center; /* Center the burger menu icon */
+  }
+  .navbarElements {
+    display: block;
+    align-items: center;
+    justify-content: space-between;
+    width: 40px;
+  }
+  .burgerMenu.hidden {
+    display: none;
+  }
+}
